# autopecas-sql-chat

./: .env  README.md  env.example  pyproject.toml
app/: chain.py  config.py  database.py  main.py  prompts.py
database/: schema.sql  seed.py
streamlit/: config.toml
